Fix table on smallscreen

--- a/css/features_style.css
+++ b/css/features_style.css
@@ -34,10 +34,16 @@ header {
     border: 0.2px solid rgba(128, 128, 128, 0.4);
     text-align: center;
     vertical-align: middle;
-    min-width: 150px;
     padding: 8px;
+    width: 50%;
 }
 
 .formats_table tr:nth-child(even) {
     background-color: rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (max-width: 920px) {
+    .formats_table {
+        max-width: 95%;
+    }
 }
